# openclaw-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml
config/: openclaw.json
scripts/: entrypoint.sh  run.py
src/openclaw_agent/: __init__.py  client.py
workspace/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
workspace/memory/: .gitkeep
workspace/skills/: README.md
workspace/skills/hello-world/: SKILL.md
