[tool.poetry]
name = "openclaw-agent"
version = "0.1.0"
description = "Python client and scripts for OpenClaw autonomous AI agents"
readme = "README.md"
authors = []
packages = [{ include = "openclaw_agent", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
openclaw-sdk = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
